--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "react": "16.8.3",
-    "react-native": "0.59.0"
+    "react-native": "0.59.0",
+    "react-redux": "^6.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.3.4",
@@ -17,7 +18,8 @@
     "jest": "^24.5.0",
     "metro-react-native-babel-preset": "^0.53.0",
     "react-test-renderer": "16.8.3",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "webpack": "^4.29.6"
   },
   "jest": {
     "preset": "react-native"
