--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "dependencies": {
     "react": "16.8.3",
     "react-native": "0.59.0",
+    "react-native-elements": "^1.1.0",
+    "react-native-vector-icons": "^6.4.1",
     "react-redux": "^6.0.1"
   },
   "devDependencies": {
