--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "react": "16.8.3",
     "react-native": "0.59.0",
     "react-native-elements": "^1.1.0",
+    "react-native-gesture-handler": "^1.1.0",
     "react-native-vector-icons": "^6.4.1",
+    "react-navigation": "^3.3.2",
     "react-redux": "^6.0.1"
   },
   "devDependencies": {
