--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "test": "jest"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "install": "^0.12.2",
     "native-base": "^2.12.1",
+    "npm": "^6.9.0",
     "react": "16.8.3",
     "react-native": "0.59.0",
     "react-native-elements": "^1.1.0",
