--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "eventemitter3": "^3.1.0",
     "install": "^0.12.2",
     "native-base": "^2.12.1",
     "npm": "^6.9.0",
